# pyElli

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .zenodo.json  AUTHORS.md  AUTHORS.rst  Berreman4x4.py  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  README.rst  TODO  changelog  dev-requirements.txt  generate_ipynb_from_gallery.sh  index.html  mkdocs.yml  plot-requirements.txt  pyproject.toml  requirements.txt  setup.cfg  setup.py  styles.css  tox.ini
.github/workflows/: benchmark.yml  build-docker.yml  linting.yml  pytest.yml  python-publish.yml  requirements.yml
dev/bench/: bench.css  data.js  index.html
doc/: FTIR.tex  FrustratedTIR.tex  Makefile  README.md  description.tex  documentation.bib  documentation.tex  info  validation-Fujiwara.tex  various-examples.tex
doc/fig/: Bragg.ipe  FTIR.ipe  FrustratedTIR.ipe  Glass-layer.ipe  Makefile  Plane_wave_real_complex.ipe  Reflection-interface.ipe  Twisted.ipe  UML.dia  Wave_evanescent_poynting.ipe  cholesteric.ipe  geometry.ipe  info  nematic.ipe  structure-Fujiwara-641.ipe  structure-Fujiwara-642.ipe
docs/: Makefile  authors.rst  conf.py  contributing.md  database.rst  dispersions.rst  elli.solver.rst  examples.rst  experiment.rst  helpers.rst  index.md  index.rst  installation.rst  jupyterlite_config.json  kkr.rst  materials.rst  modules.rst  overview.rst  plot.rst  read_write.rst  requirements.txt  result.rst  solvers.rst  spectraray.rst  structure.rst  usage.rst
docs/TiO2Fit/: TiO2 Multilayerfit.md  TiO2_400cycles.txt
docs/_static/: style.css
docs/howto/: custom_fitting.md  fitting_multiple_angles.md  index.md  mueller_matrix.md
docs/jupyter_test/: test.ipynb
docs/reference/: api_documentation.md  kkr.md  solvers.md
docs/tutorial/: index.md  simple_fit.md  working_with_dispersions.md
examples/: Bragg-example.py  Bragg.py  Bragg2.py  FTIR-angle-variation.py  FTIR-angle.py  FTIR-thickness.py  FTIR.py  FrustratedTIR-angle.py  FrustratedTIR-thickness.py  Interferences.py  Jones-interface.py  README.md  TIR.py  cholesteric-crystal.py  cholesteric-example.py  cholesteric.py  frustrated_total_internal_reflection.py  interface-Jones.py  interface-reflection.py  interferences.py  reflection-interface.py  twisted-nematic.py  validation-Bragg.py  validation-Fujiwara-641.py  validation-Fujiwara-642.py  validation-cholesteric.py
examples/Basic Usage/: Basic Usage.ipynb
examples/Bragg-mirror/: Bragg-Mirror.ipynb  Bragg-example.ipynb  Bragg-example.py  validation-Bragg.ipynb  validation-Bragg.py
examples/Custom fitting/: Custom fitting example.ipynb
examples/Ellipsometry uniaxial materials/: Fujiwara-641.ipynb  Fujiwara-641.py  Fujiwara-642.ipynb  Fujiwara-642.py
examples/Interfaces/: Interferences.ipynb  Interferences.py  interface-reflection.ipynb  interface-reflection.py
examples/Liquid crystals/: cholesteric-example.ipynb  cholesteric-example.py  cholesteric-liquid.ipynb  twisted-nematic.ipynb  twisted-nematic.py  validation-cholesteric.ipynb  validation-cholesteric.py
examples/SiO2_Si Mueller Matrix/: SiO2_Si Mueller Matrix.ipynb
examples/TiO2 Fit/: TiO2 Multilayerfit.ipynb  TiO2 Multilayerfit.md
examples/TiO2 Mueller Matrix/: SiO2_Si Mueller Matrix.ipynb  Wafer_MM_70.txt
examples/Total internal reflection/: FrustratedTIR-angle.ipynb  FrustratedTIR-angle.py  FrustratedTIR-thickness.ipynb  FrustratedTIR-thickness.py  TIR.ipynb  TIR.py
examples/gallery/: README.rst  SiO2_diel_func.csv  plot_01_basic_usage.py  plot_02_TiO2_multilayer.py  plot_03_custom_fitting.py  plot_SiO2_Si_MM.py  plot_basic_usage.py  plot_bragg_mirror.py  plot_cholesteric_lq.py  plot_interface_reflection.py
paper/: paper.bib  paper.md
requirements/: dev-requirements.txt  fitting-requirements.txt  plot-requirements.txt  requirements.txt
scripts/: generate_ipynb_from_gallery.sh  generate_requirements.sh
src/berreman/: __init__.py  berreman.py
src/berreman4x4/: __init__.py  berreman4x4.py  delta_matrix.py  dispersions.py  evaluation.py  experiment.py  half_spaces.py  layers.py  materials.py  materials_db.py  math.py  plotter.py  propagator.py  result.py  rotations.py  settings.py  solver.py  solver2x2.py  solver4x4.py  solver4x4_math.py  solverExpm.py  spectraray.py  structure.py  tmm2x2.py  utils.py
src/elli/: __init__.py  dispersions.py  experiment.py  materials.py  materials_db.py  math.py  nexus.py  plotter.py  result.py  solver.py  solver2x2.py  solver4x4.py  spectraray.py  structure.py  units.py  utils.py
tests/: benchmark_fitting.py  benchmark_formula_dispersion.py  benchmark_propagators_TiO2.py  conftest.py  create_dispersion_prototypes.py  fixtures.py  test_TiO2.py  test_accurion.py  test_bragg_mirror.py  test_dispersion_adding.py  test_dispersion_factory.py  test_dispersions.py  test_docs.py  test_formula_dispersion.py  test_internal_reflection.py  test_kkr.py  test_liquid_crystals.py  test_materials.py  test_mixture_models.py  test_nexus.py  test_nexus_formula.py  test_notebook.ipynb  test_refractive_index_info.py  test_result.py  test_skeleton.py  test_solvers.py  test_spectraray.py  test_structures.py  test_uniaxial_crystals.py  test_unsummable_dispersion.py  test_utils.py  test_wollam.py
tests/test_dispersions/: CauchyUrbach_custom_values.csv  Cauchy_custom_values.csv  Cauchy_default.csv  DrudeEnergy_custom_values.csv  DrudeResistivity_custom_values.csv  DrudeResistivity_default.csv  Gauss_custom_values.csv  Gaussian_custom_values.csv  Gaussian_default.csv  LorentzEnergy_custom_values.csv  LorentzLambda_custom_values.csv  LorentzLambda_default.csv  Poles_custom_values.csv  Poles_default.csv  PseudoDielectricFunction_custom_values.csv  TableEpsilon_custom_values.csv  TableEpsilon_default.csv  Table_custom_values.csv  Tanguy_custom_values.csv  Tanguy_default.csv  TaucLorentz_custom_values.csv
tests/test_nexus/: ellips.test.nxs  ellips_nx_opt.test.nxs
tests/test_nexus_formula/: MoSe2-Munkhbat-o.nxs  MoTe2-Beal.nxs  Si-Chandler-Horowitz.nxs  Si-Salzberg.nxs  WTe2-Munkhbat-alpha.nxs  (+1 more)
(+56 files in other folders)
